--- a/Website/style.css
+++ b/Website/style.css
@@ -2,9 +2,9 @@ body, html {
     height: 100%;
     margin: 0;
     display: flex;
-    flex-direction: row;  /* 水平排列子元素 */
-    justify-content: flex-start;  /* 从左到右布局 */
-    align-items: flex-start;  /* 顶部对齐 */
+    flex-direction: row; 
+    justify-content: flex-start;  
+    align-items: flex-start;  
 }
 
 #container {
@@ -13,10 +13,10 @@ body, html {
     border: 1px solid #ddd;
     padding: 20px;
     background-color: #f9f9f9;
-    text-align: left;
+    text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin: 20px;  /* 增加外边距，使布局更整齐 */
-    flex-shrink: 0;  /* 防止容器在窗口缩小时收缩 */
+    margin: 20px;  
+    flex-shrink: 0;  
 }
 
 .line-name {
@@ -29,14 +29,13 @@ body, html {
 }
 
 #map {
-    height: 600px;  /* 确保地图有固定高度 */
+    height: 600px; 
     width: 960px;
     flex: 1;
     margin: 20px;
 }
 
 
-/* 小提示框样式 */
 .tooltip {
     position: absolute;
     background-color: rgb(145, 143, 143);
