--- a/Website/style.css
+++ b/Website/style.css
@@ -7,20 +7,53 @@ body, html {
     align-items: flex-start;  
 }
 
-#container {
-    width: 400px;
-    height: auto;
-    border: 1px solid #ddd;
-    padding: 20px;
+#box {
+    width: 100%;
+    height: 15%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: #f9f9f9;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    border: 2px solid #ddd;
+    margin-bottom: 10px;  /* margin with the footer */
+    box-shadow: 0 2px 8px #ddd;
+}
+
+.select {
+    padding: 10px; /*inner padding of the select box*/
+    width: 10%;
+    margin: 10px 0;
+    font-size: 16px;
+    border: 1px solid #ddd;
+    background-color: #716363;
+    margin-top: 0%;
+    color: white;  
+}
+
+#container {
+    width: 25%;
+    height: 85%;
+    position: fixed;
+    top: 16%;  
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
     text-align: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin: 20px;  
-    flex-shrink: 0;  
+    background-color: #f9f9f9;
+    border: 2px solid #ddd;
+    margin-right: 10px;  /* margin with the right sidebar */
 }
 
 .line-name {
     margin: 10px 0;
+    width: 100%;
     padding: 10px;
     font-size: 18px;
     color: white;
@@ -28,17 +61,9 @@ body, html {
     cursor: pointer;
 }
 
-#map {
-    height: 600px; 
-    width: 960px;
-    flex: 1;
-    margin: 20px;
-}
-
-
 .tooltip {
-    position: absolute;
-    background-color: rgb(145, 143, 143);
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.7);
     color: white;
     padding: 8px 12px;
     border-radius: 5px;
@@ -46,4 +71,30 @@ body, html {
     display: none;
     pointer-events: none;
     white-space: nowrap;
+    z-index: 1000;
 }
+
+
+#map-container {
+    width: 74%;
+    height: 85%;
+    position: fixed;
+    top: 16%;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #f9f9f9;
+    border: 2px solid #ddd;
+    margin-left: 10px;  /* margin with the left sidebar */
+}
+
+#map {
+    height: 90%; 
+    width: 960px;
+    flex: 1;
+    margin: 20px;
+}
+
+
